# vt

./: README.md  RHS.sublime-workspace
ClientServer/: client  client.c  server  server.c
HSVFilter/: CMakeLists.txt  main (copy).cpp  main.cpp  main2.cpp
Homography/: CMakeLists.txt  main.cpp
OpenCVTest/: CMakeLists.txt  main.cpp
OpenCVTest/build-default/: CMakeCache.txt  Makefile  OpenCVTest  OpenCVTest.cbp  cmake_install.cmake
Sistemi Operativi e Laboratorio/: relazionesol.tex
Sistemi Operativi e Laboratorio/fats/: Makefile  README  td.c  tg.c
Sistemi Operativi e Laboratorio/fats/src/client/: client_impl.c  client_impl.h  fats_client.c
Sistemi Operativi e Laboratorio/fats/src/com/: com_defs.h  sol_com.c  sol_com.h
Sistemi Operativi e Laboratorio/fats/src/common/: common.c  common.h
Sistemi Operativi e Laboratorio/fats/src/create/: fats_create.c
Sistemi Operativi e Laboratorio/fats/src/fat/: fat.h  fat_defs.h  fat_error.c  fat_error.h  format.c  format.h  load_fat.c  load_fat.h  ops_fat.c  ops_fat.h
Sistemi Operativi e Laboratorio/fats/src/server/: fats_server.c  server_impl.c  server_impl.h  thlist.c  thlist.h
Sistemi Operativi e Laboratorio/fats/test/: test1a.input  test1a.ok  test1b.input  test1b.ok  test1c.input  test1c.ok  test1d.input  test1d.ok  test2a.input  test2b.input  test2c.input  test2d.input  test3.ok  test3a.input  test3b.input  test3c.input  test3d.input
VideoTracker/: Aggregator.cpp  BackgroundSubtractionBasedDetector.hpp  CMakeLists.txt  ColorBasedDetector.hpp  IDetector.hpp  MovingObject.hpp  Msg.hpp  Receiver.cpp  ServerSocket.cpp  ServerSocket.hpp  Snapshot.cpp  Snapshot.hpp  Socket.cpp  Socket.hpp  SynchronizedPriorityQueue.hpp  TODO.txt  Timer.hpp  calibration.cpp  calibration.hpp  client.cpp  hungarian.cpp  hungarian.hpp  msg.hpp  serializedata.cpp  server.cpp  thread.hpp  tracker.cpp  tracker2.cpp  tracker2_matching.cpp
VideoTracker/debug/: CMakeCache.txt  CameraServer  Client  Makefile  cmake_install.cmake
VideoTracker/params/: camera_params.yaml
raspicam-0.1.3/src/: raspicam_cv.cpp  raspicam_cv.cpp~
raspicam-0.1.3/utils/: raspicam_cv_test.cpp
testBerry/testOpenCV/: SubstractorTest.cpp  main.cpp  testOpenCV.pro
testBerry/testOpenCVRelease/: Config.txt  Makefile  SubstractorTest.cpp  testOpenCV
